--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -18,7 +18,7 @@ es:
       footer_contact: "Contacto"
       footer_phone_number_txt: "+56 2 2419 2770"
       footer_email_txt: "Press Contact"
-      footer_address_txt: "Holanda 895, Providencia, Santiago"
+      footer_address_txt: "Holanda 895, Providencia, Santiago, Chile"
     navbar_signin:
       sign_in: "Iniciar sesión"
     sign_in:
