Further translating, including objective types

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -28,7 +28,7 @@ en:
       sign_in: "Sign in"
       forgot_password: "Forgot your password?"
     footer:
-      estratega_description: "Estratega is an advocacy planning methodology that enhances your team's performance and reduces risks"
+      estratega_description: "Estratega is a methodology and tool designed to focus your organization’s advocacy planning, monitoring, and evaluation"
       contact: "Contact"
       mail: "Mail"
       mailing_adress: "lab@ciudadanointeligente.org"
@@ -123,8 +123,8 @@ en:
       step_one: "Once the project page you will see 3 tabs. In <strong>Stages</strong> are the stages of data entry, <strong>Dashboard</strong> will show indicators of success and progress , will be the <strong>Documents</strong> library of important documents , and finally <strong>Overview</strong> showing the summary of all the information entered"
       step_two: "Let's start with the advocacy plan by completing the information requested in the <strong>Stage 1</strong>"
       step_three: "These icons show you the 3 states of data entry. They'll tell you if you need to fill a previous step (<i class='fa fa-lock'></i>), if they are ready to income (<i class='fa fa-unlock'></i>) or it contains information (<i class='fa fa-check'></i>)"
-      section1_title: "Stage 1: Understand the real world problem and define policy objectives"
-      section2_title: "Stage 2: Detailed plan for achieving each objective"
+      section1_title: "Stage 1: Understand the problem you want to face"
+      section2_title: "Stage 2: Plan your strategy"
       stage1_title: "Step 1: Understand the problem"
       stage2_title: "Step 2: Define objectives"
       stage3_title: "Step 3: Create a work plan"
@@ -237,14 +237,14 @@ en:
       title: "What problems you want to address? What policy change you aim to achieve?"
       description: "The foundation of an effective advocacy strategy is a common understanding of the main problems that affect children, their policy dimensions and related policy solutions. It is important you take time to go through this discussion because without a clear, articulated issue and well-defined problems and solutions the remaining parts of the strategy will lose focus."
       subtitle1: "Which real-world problem that people are facing do you want to address?"
-      subtitle1_tooltip: "A real-world problem is the negative situation children face that UNICEF would like to change (malnutrition, child poverty, infant mortality, disparities in education, etc). At the early stages of the planning process you should identify and articulate the real-world problem you want to address. The problem should be described as precisely and concretely as possible. For instance, whenever is possible, it should include the geographical scope, a time period, and population affected (see example below)"
+      subtitle1_tooltip: "A real-world problem is the negative situation people face that you intend to change. It should describe the geographical scope, a time period, and population affected."
       subtitle1_explanation: "A real-world problem is the negative situation children face that UNICEF would like to change (malnutrition, child poverty, infant mortality, disparities in education, etc). At the early stages of the planning process you should identify and articulate the real-world problem you want to address. The problem should be described as precisely and concretely as possible. For instance, whenever is possible, it should include the geographical scope, a time period, and population affected (see example below)"
       subtitle2: "Which are the policy-related causes of the real-world problem?"
       subtitle2_tooltip: "Behind the real-world problems there are usually multiple causes, including causes related to programmes, to bad practices or to the policymaking environment. Advocacy work focuses specifically on the latest and often refers to causes such as deficient governance mechanisms, inadequate legal framework or imbalanced power relationships. Therefore, your problem analysis should prioritize the identification of these causes rather than all the factors behind the real-world problem"
       subtitle3: "Which policy solutions would constitute an appropriate response?"
       subtitle3_tooltip: "What are the main policy solutions that would resolve the problems identified and that UNICEF would like to see adopted?"
       problem: "Problem"
-      project_description: "Description"
+      problem_description: "Description"
       focus_area: "Focus Area"
       data_entry: "Data Entry"
       add_button: "Add"
@@ -384,6 +384,14 @@ en:
       select_solution: "Select Solution"
       select_solution_placeholder: "(To select more than 1 solution press and hold the ctrl key)"
       objective_type: "Objective Type"
+      objective_type_list:
+        - "Policy development"
+        - "Placement on the policy agenda"
+        - "Policy adoption"
+        - "Policy blocking"
+        - "Policy implementation"
+        - "Policy maintenance"
+        - "Other"
       objective_placeholder: "Add any important objective info"
       prioritized: "Prioritized <br /><span class='mini-explicacion'>(You will only be able to work with this objective if it's prioritized)</span>"
       save_button: "Save"
