--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -384,6 +384,14 @@ es:
       select_solution: "Asociar a solución(es)"
       select_solution_placeholder: "(Para seleccionar más de ujna solución presione la tecla ctrl al hacer click)"
       objective_type: "Tipo de Objetivo"
+      objective_type_list:
+        - "Desarrollo de políticas públicas"
+        - "Establecimiento de un tema en la agenda política"
+        - "Adopción de políticas públicas"
+        - "Bloqueo de políticas públicas"
+        - "Implementación de políticas públicas"
+        - "Mantenimiento de políticas públicas"
+        - "Otros"
       objective_placeholder: "Redactar el objetivo"
       prioritized: "Priorizado <br /><span class='mini-explicacion'>(Solo prodrá trabajar con este objetivo si se encuentra priorizado)</span>"
       save_button: "Guardar"
