wip fix transaltions

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -146,7 +146,7 @@ es:
       actors: "Actores"
       enabling_factors: "Factores habilitantes"
       barriers: "Barreras"
-      outcomes: "Interim outcomes"
+      outcomes: "Resultados Intermedios"
       activities: "Actividades"
       asks: "Peticiones"
       process_description: "Comprender procesos y ciclos de toma de decisiones"
