--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -120,7 +120,7 @@ es:
       dashboard: "Panel de control"
       documents: "Documentos"
       overview: "Resumen"
-      guide_me: "Gíame"
+      guide_me: "Guíame"
       step1_description: "Articular el problema del mundo real que se desea abordar"
       step2_description: "Identificar las causas del problema"
       step3_description: "Formular soluciones políticas para las causas del problema"
