--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -213,6 +213,22 @@ en:
       objectives_with_failed_activities: "Objectives with failed activities"
       percentage_advance_priority_objectives: "Percentage advance priority objectives"
       percentage_of_total_advance_objectives: "Percentage of total advance objectives"
+      successful_asks: "successful Asks"
+      neutral_asks: "neutral Asks"
+      failed_asks: "failed Asks"
+      completed_asks_rate: "Completed Rate"
+      success_rate: "Success Rate"
+      state_of_asks_this_year: "State of Asks this Year"
+      outcomes_with_all_asks_completed: "Interim Outcomes with all Asks Completed"
+      outcomes_without_asks: "Interim Outcomes without Asks"
+      outcomes_with_overdue_asks: "Interim Outcomes with overdue Asks"
+      rate_completed_outcomes: "Completed Rate"
+      rate_success_outcomes: "success Rate"
+      objectives_without_interim_outcomes: "Objectives without Interim Outcomes"
+      objectives_with_failed_outcomes: "Objectives with failed Interim Outcomes"
+      rate_completed_objectives: "Completed Rate"
+      rate_success_objectives: "Success Rate"
+      asks: Asks
     resources:
       new_resource: "Add resource"
       title: "Title"
