--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -217,6 +217,22 @@ es:
       objectives_with_failed_activities: "Objetivos sin actividades fallidas"
       percentage_advance_priority_objectives: "Porcentaje de avance de los objetivos priorizados"
       percentage_of_total_advance_objectives: "Porcentaje total de avance de los objetivos"
+      successful_asks: "Peticiones exitosas"
+      neutral_asks: "Peticiones neutras"
+      failed_asks: "Peticiones fallidas"
+      completed_asks_rate: "Porcentaje de Peticiones Completadas"
+      success_rate: "Porcentaje de exito"
+      state_of_asks_this_year: "Estado de las Peticiones de este año"
+      outcomes_with_all_asks_completed: "Resultados Intermedios con todas sus peticiones completadas"
+      outcomes_without_asks: "Resultados Intermedios sin Peticiones"
+      outcomes_with_overdue_asks: "Resultados Intermedios con peticiones vencidas"
+      rate_completed_outcomes: "Porcentaje de Resultados Intermedios Completados"
+      rate_success_outcomes: "Porcentaje de Resultados Intermedios Exitosos"
+      objectives_without_interim_outcomes: "Objetivos sin Resultados Intermedios"
+      objectives_with_failed_outcomes: "Objetivos con Resultados Intermedios Fallidos"
+      rate_completed_objectives: "Porcentaje de Objetivos Completados"
+      rate_success_objectives: "Porcentaje de Objetivos Exitosos"
+      asks: "Peticiones"
     resources:
       new_resource: "Añadir recurso"
       title: "Título"
