details commented on 20160503

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -139,6 +139,7 @@ en:
       causes: "Causes"
       solutions: "Solutions"
       objectives: "Objectives"
+      objectives_prioritized: "Prioritized"
       actors: "Actors"
       enabling_factors: "Enabling factors"
       barriers: "Barriers"
